--- a/WebStore/appsettings.Development.json
+++ b/WebStore/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  //"ConnectionStrings": {
+  //  "Default": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=MailsAndSenders"
+  //},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
