--- a/WebStore/appsettings.json
+++ b/WebStore/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=MailsAndSenders"
+    "Default": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=WebStore-DB"
   },
   "Logging": {
     "LogLevel": {
