--- a/UI/WebStore/appsettings.json
+++ b/UI/WebStore/appsettings.json
@@ -9,5 +9,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "WebApiUrl":  "http://localhost:5001"
 }
