--- a/UI/WebStore/appsettings.json
+++ b/UI/WebStore/appsettings.json
@@ -1,7 +1,7 @@
 {
-  "ConnectionStrings": {
-    "Default": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=WebStore-DB"
-  },
+  //"ConnectionStrings": {
+  //  "Default": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=WebStore-DB"
+  //},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
