--- a/Services/WebStore.ServiceHosting/log4net.config
+++ b/Services/WebStore.ServiceHosting/log4net.config
@@ -3,7 +3,7 @@
   <appender name="RollingFileAppender"
   type="log4net.Appender.RollingFileAppender">
     <file type="log4net.Util.PatternString"
-    value="/Logs/%date{yyyy}/%date{MM}/%date{dd}/WebStore-Services.log" />
+    value="./Logs/%date{yyyy}/%date{MM}/%date{dd}/WebStore-Services.log" />
     <appendToFile value="true" />
     <maximumFileSize value="50MB" />
     <maxSizeRollBackups value="-1" />
