Внедрение постраничного разбиение каталога товаров в сервис

--- a/UI/WebStore/appsettings.json
+++ b/UI/WebStore/appsettings.json
@@ -22,5 +22,6 @@
     }
   },
   "AllowedHosts": "*",
-  "WebApiUrl":  "http://localhost:5001"
+  "WebApiUrl": "http://localhost:5001",
+  "CatalogPageSize": 3
 }
